Fix banner on mobile device

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -49,6 +49,10 @@ body {
   background-size: cover;
   position: relative;
 
+  @include mobile {
+    background-position: center;
+  }
+
   &:before {
     content: '';
     position: absolute;
